syntax = "proto3";

package crude.crude;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "crude/crude/params.proto";
import "crude/crude/transaction.proto";

option go_package = "crude/x/crude/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/crude/crude/params";
  
  }
  
  // Queries a list of Transaction items.
  rpc Transaction    (QueryGetTransactionRequest) returns (QueryGetTransactionResponse) {
    option (google.api.http).get = "/crude/crude/transaction/{id}";
  
  }
  rpc TransactionAll (QueryAllTransactionRequest) returns (QueryAllTransactionResponse) {
    option (google.api.http).get = "/crude/crude/transaction";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryGetTransactionRequest {
  uint64 id = 1;
}

message QueryGetTransactionResponse {
  Transaction Transaction = 1 [(gogoproto.nullable) = false];
}

message QueryAllTransactionRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllTransactionResponse {
  repeated Transaction                            Transaction = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination  = 2;
}

